--- a/Makefile.in
+++ b/Makefile.in
@@ -110,6 +110,9 @@ install_only:
 	  mv -f $(prefix)/roxen/server $(prefix)/roxen/server.old ; \
 	fi
 	cp -r $(SRCDIR)/server $(prefix)/roxen/
+	@if test -f $(prefix)/roxen/server.old/etc/environment ; then \
+	  cp $(prefix)/roxen/server.old/etc/environment $(prefix)/roxen/server/etc/environment; \
+	else :; fi
 	@rm -rf	$(prefix)/roxen/server/CVS $(prefix)/roxen/server/*/CVS\
 		$(prefix)/roxen/server/*/*/CVS
 	(cd pike/$(PIKEVERSION)/src; $(MAKE) "prefix=$(prefix)/roxen/server" "CC=$(CC)" "LDFLAGS=$(LDFLAGS)" install)
