--- a/Makefile.in
+++ b/Makefile.in
@@ -454,7 +454,15 @@ tar_dist:
 	echo Restoring DBAPI...; \
 	(cd $$version; tar xf ../dbapi.tar || exit 1); \
 	echo Building lobotomized NDA distribution...; \
-	tar cf - $$version | gzip -9 >$$version-$$type-nda-int.tar.gz
+	tar cf - $$version | gzip -9 >$$version-$$type-nda-int.tar.gz \
+	(mkdir 40bit-nda; cd 40bit-nda; gzip -cd < ../$$version-$$type-nda-full.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1); \
+	echo Building 40bit NDA distribution...; \
+	(cd 40bit-nda; tar cf - $$version | gzip -9 >../$$version-$$type-nda-40bit.tar.gz || exit 1); \
+	rm -rf 40bit-nda; \
+	(mkdir 40bit; cd 40bit; gzip -cd < ../$$version-$$type.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1); \
+	echo Building 40bit ordinary distribution...; \
+	(cd 40bit; tar cf - $$version | gzip -9 >../$$version-$$type-40bit.tar.gz || exit 1); \
+	rm -rf 40bit;
 
 dist: copy_dist tar_dist
 	@echo Distribution build complete.
