Added servlet module
Rev: server/modules/scripting/servlet.pike:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -215,6 +215,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/scripting/fpscript.pike foreign_ident
 /server/modules/scripting/newpikescript.pike foreign_ident
 /server/modules/scripting/pikescript.pike foreign_ident
+/server/modules/scripting/servlet.pike foreign_ident
 /server/modules/tags/check_spelling.pike foreign_ident
 /server/modules/tags/configtablist.pike foreign_ident
 /server/modules/tags/countdown.pike foreign_ident
