--- a/.gitattributes
+++ b/.gitattributes
@@ -122,6 +122,7 @@ urw_itc_avant_garde-demi-r binary
 /server/config_actions/resolv.pike foreign_ident
 /server/config_actions/shutdown.pike foreign_ident
 /server/config_actions/upgrade.pike foreign_ident
+/server/etc/config.40bit.html foreign_ident
 /server/etc/config.html foreign_ident
 /server/etc/config.int.html foreign_ident
 /server/etc/extensions foreign_ident
