Adding JSDK classes.
Rev: server/etc/classes/jsdk.jar:1.1
Rev: server/etc/classes/roxen_servlet.jar:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@
 *.ico binary
 /extern/cgi.testsuite/test3.in eol=crlf
 /extern/cgi.testsuite/test4.in -text -crlf
+*.jar binary
 *.jpg binary
 *.out -text -crlf
 /extern/cgi.testsuite/test3.out eol=crlf
