--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.63 1999/04/22 23:27:17 marcus Exp $
+# $Id: configure.in,v 1.64 1999/05/07 04:10:46 mast Exp $
 #
 
 prefix=$PWD
@@ -686,7 +686,7 @@ else :; fi
 
 export CPPFLAGS LDFLAGS
 
-AC_CONFIG_SUBDIRS($roxen_lib_subdirs extern pike)
+AC_CONFIG_SUBDIRS($roxen_lib_subdirs extern tools pike)
 AC_OUTPUT(Makefile, [
   echo ${PIKEVERSION} >stamp-h;
   echo ${PIKEVERSION} >"make_vpath.in"
