--- a/Makefile.in
+++ b/Makefile.in
@@ -460,27 +460,33 @@ tar_dist:
 	  fi ; \
 	fi; \
 	echo Type $$type.; \
-	echo Building full NDA distribution...; \
+	echo "Building full NDA distribution..."; \
 	tar cf - $$version | gzip -9 >$$version-$$type-nda-full.tar.gz; \
 	if (cd $$version; make keep_dbapi || exit 1); then \
 	  mv $$version/dbapi.tar . || exit 1; \
 	else :; fi; \
+	if (cd $$version; make keep_pro || exit 1); then \
+	  mv $$version/pro.tar . || exit 1; \
+	else :; fi; \
 	(cd $$version; make censor_dbapi || exit 1); \
-	echo Building full ordinary distribution...; \
+	(cd $$version; make censor_pro || exit 1); \
+	echo "Building full ordinary distribution..."; \
 	tar cf - $$version | gzip -9 >$$version-$$type.tar.gz; \
 	(cd $$version; make censor_crypto || exit 1); \
-	echo Building lobotomized ordinary distribution...; \
+	echo "Building lobotomized ordinary distribution..."; \
 	tar cf - $$version | gzip -9 >$$version-$$type-int.tar.gz; \
-	echo Restoring DBAPI...; \
+	echo "Restoring DBAPI..."; \
 	(cd $$version; tar xf ../dbapi.tar || exit 1); \
-	echo Building lobotomized NDA distribution...; \
+	echo "Restoring Challenger Pro parts..."; \
+	(cd $$version; tar xf ../pro.tar || exit 1); \
+	echo "Building lobotomized NDA distribution..."; \
 	tar cf - $$version | gzip -9 >$$version-$$type-nda-int.tar.gz; \
 	(mkdir 40bit-nda; cd 40bit-nda; gzip -cd < ../$$version-$$type-nda-full.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1); \
-	echo Building 40bit NDA distribution...; \
+	echo "Building 40bit NDA distribution..."; \
 	(cd 40bit-nda; tar cf - $$version | gzip -9 >../$$version-$$type-nda-40bit.tar.gz || exit 1); \
 	rm -rf 40bit-nda; \
-	(mkdir 40bit; cd 40bit; gzip -cd < ../$$version-$$type.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1); \
-	echo Building 40bit ordinary distribution...; \
+	(mkdir 40bit; cd 40bit; gzip -cd < ../$$version-$$type.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1; make censor_pro || exit 1); \
+	echo "Building 40bit ordinary distribution..."; \
 	(cd 40bit; tar cf - $$version | gzip -9 >../$$version-$$type-40bit.tar.gz || exit 1); \
 	rm -rf 40bit;
 
