--- a/Makefile.in
+++ b/Makefile.in
@@ -460,8 +460,8 @@ tar_dist:
 	  fi ; \
 	fi; \
 	echo Type $$type.; \
-	echo "Building full NDA distribution..."; \
-	tar cf - $$version | gzip -9 >$$version-$$type-nda-full.tar.gz; \
+	echo "Building full Pro distribution..."; \
+	tar cf - $$version | gzip -9 >$$version-$$type-pro-full.tar.gz; \
 	if (cd $$version; make keep_dbapi || exit 1); then \
 	  mv $$version/dbapi.tar . || exit 1; \
 	else :; fi; \
@@ -479,11 +479,11 @@ tar_dist:
 	(cd $$version; tar xf ../dbapi.tar || exit 1); \
 	echo "Restoring Challenger Pro parts..."; \
 	(cd $$version; tar xf ../pro.tar || exit 1); \
-	echo "Building lobotomized NDA distribution..."; \
-	tar cf - $$version | gzip -9 >$$version-$$type-nda-int.tar.gz; \
-	(mkdir 40bit-nda; cd 40bit-nda; gzip -cd < ../$$version-$$type-nda-full.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1); \
-	echo "Building 40bit NDA distribution..."; \
-	(cd 40bit-nda; tar cf - $$version | gzip -9 >../$$version-$$type-nda-40bit.tar.gz || exit 1); \
+	echo "Building lobotomized Pro distribution..."; \
+	tar cf - $$version | gzip -9 >$$version-$$type-pro-int.tar.gz; \
+	(mkdir 40bit-nda; cd 40bit-nda; gzip -cd < ../$$version-$$type-pro-full.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1); \
+	echo "Building 40bit Pro distribution..."; \
+	(cd 40bit-nda; tar cf - $$version | gzip -9 >../$$version-$$type-pro-40bit.tar.gz || exit 1); \
 	rm -rf 40bit-nda; \
 	(mkdir 40bit; cd 40bit; gzip -cd < ../$$version-$$type.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1; make censor_pro || exit 1); \
 	echo "Building 40bit ordinary distribution..."; \
