--- a/Makefile.in
+++ b/Makefile.in
@@ -463,8 +463,8 @@ tar_dist:
 	echo "Storing away manuals..."; \
 	mv $$version/server/manual/*parsed*.tar . || exit 1; \
 	echo "Restoring Pro manual..."; \
-	mv unparsed_pro.tar $$version/server/manual/unparsed.tar || exit 1; \
-	mv parsed_pro.tar $$version/server/manual/parsed.tar || exit 1; \
+	cp unparsed_pro.tar $$version/server/manual/unparsed.tar || exit 1; \
+	cp parsed_pro.tar $$version/server/manual/parsed.tar || exit 1; \
 	echo "Building full Pro distribution..."; \
 	tar cf - $$version | gzip -9 >$$version-$$type-pro-full.tar.gz; \
 	if (cd $$version; make keep_dbapi || exit 1); then \
@@ -476,10 +476,10 @@ tar_dist:
 	(cd $$version; make censor_dbapi || exit 1); \
 	(cd $$version; make censor_pro || exit 1); \
 	echo "Removing Pro manual and restoring Challenger manual..."; \
-	mv $$version/server/manual/*parsed*.tar . || exit 1; \
-	mv unparsed_challenger.tar $$version/server/manual/unparsed.tar \
+	rm $$version/server/manual/*parsed*.tar || exit 1; \
+	cp unparsed_challenger.tar $$version/server/manual/unparsed.tar \
 	 || exit 1; \
-	mv parsed_challenger.tar $$version/server/manual/parsed.tar \
+	cp parsed_challenger.tar $$version/server/manual/parsed.tar \
 	 || exit 1; \
 	echo "Building full Challenger distribution..."; \
 	tar cf - $$version | gzip -9 >$$version-$$type.tar.gz; \
@@ -491,9 +491,9 @@ tar_dist:
 	echo "Restoring Challenger Pro parts..."; \
 	(cd $$version; tar xf ../pro.tar || exit 1); \
 	echo "Removing Challenger manual and restoring Pro manual..."; \
-	mv $$version/server/manual/*parsed*.tar . || exit 1; \
-	mv unparsed_pro.tar $$version/server/manual/unparsed.tar || exit 1; \
-	mv parsed_pro.tar $$version/server/manual/parsed.tar || exit 1; \
+	rm $$version/server/manual/*parsed*.tar || exit 1; \
+	cp unparsed_pro.tar $$version/server/manual/unparsed.tar || exit 1; \
+	cp parsed_pro.tar $$version/server/manual/parsed.tar || exit 1; \
 	echo "Building lobotomized Pro distribution..."; \
 	tar cf - $$version | gzip -9 >$$version-$$type-pro-int.tar.gz; \
 	(mkdir 40bit-nda; cd 40bit-nda; gzip -cd < ../$$version-$$type-pro-full.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1); \
@@ -502,10 +502,10 @@ tar_dist:
 	rm -rf 40bit-nda; \
 	(mkdir 40bit; cd 40bit; gzip -cd < ../$$version-$$type.tar.gz | tar xf -; cd $$version; make censor_strong_crypto || exit 1; make censor_pro || exit 1); \
 	echo "Removing Pro manual and restoring Challenger manual..."; \
-	mv $$version/server/manual/*parsed*.tar . || exit 1; \
-	mv unparsed_challenger.tar $$version/server/manual/unparsed.tar \
+	rm $$version/server/manual/*parsed*.tar . || exit 1; \
+	cp unparsed_challenger.tar $$version/server/manual/unparsed.tar \
 	 || exit 1; \
-	mv parsed_challenger.tar $$version/server/manual/parsed.tar \
+	cp parsed_challenger.tar $$version/server/manual/parsed.tar \
 	 || exit 1; \
 	echo "Building 40bit ordinary distribution..."; \
 	(cd 40bit; tar cf - $$version | gzip -9 >../$$version-$$type-40bit.tar.gz || exit 1); \
